--- a/react/clubhouse-calendar/src/components/Calendar.css
+++ b/react/clubhouse-calendar/src/components/Calendar.css
@@ -11,6 +11,7 @@
     padding-right: 4%;
     /* 右のパディングを8%に設定 */
     /* 画面の下の方にカレンダーを表示するためのパディング */
+    margin-bottom: 50px;
   }
 
   /* カレンダーのヘッダーのスタイルを調整 */
@@ -28,6 +29,7 @@
   margin: 0 auto; /* 上下のマージンを0、左右のマージンを自動に設定 */
   padding-left: 8%; /* 左のパディングを8%に設定 */
   padding-right: 8%; /* 右のパディングを8%に設定 */
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
